# ride

./: .gitignore  A2A_AGENTS_UNIFIED.md  A2A_FIXES_SUMMARY.md  AGENT_ORCHESTRATOR.md  ANDROID_STUDIO_JCEF.md  CHANGELOG.md  CHANGELOG_TERMINAL_INTEGRATION.md  CLAUDE.md  LICENSE  README.md  UNCERTAINTY_ANALYSIS_ROADMAP.md  build.gradle.kts  build_log.txt  config.toml  gradle.properties  test_scanner_performance.kts
docs/: ARCHITECTURE_SUMMARY.md  BACKLOG.md  CHANGELOG.md  CHANGELOG_TERMINAL_INTEGRATION.md  OLLAMA_DEBUG.md  OLLAMA_SETUP.md  PHASES_7_8_COMPLETION_SUMMARY.md  PUBLISHING_GUIDE.md  README.md  SYSTEM_DEMO.md  TERMINAL_AGENT_SUMMARY.md  TERMINAL_IMPROVEMENTS.md  USAGE_EXAMPLES.md  api-integration.md  architecture.md  chat-agent-example.md  mcp-filesystem-integration.md  mcp-python-integration.md  mcp-server-rust.md  project-structure.md  sequence-diagrams.md  ИСПРАВЛЕНИЯ_A2A_ОРКЕСТРАТОРА.md
docs/api/: project-scanner-api-for-agents.md  response-formats.md
docs/architecture/: agent-response-processing.md  common-css-integration.md  overview.md
docs/features/: FEATURE_UNCERTAINTY_ANALYSIS.md  README.md  a2a-protocol.md  code-analysis-agent.md  mcp-integration.md  terminal-agent-integration.md  terminal-agent.md  terminal-command-usage.md  token-management.md  token-usage-tracking.md  uncertainty-analysis-roadmap.md
docs/guides/: android-studio-jcef.md  project-scanner-best-practices.md  project-scanner-configuration-examples.md  project-scanner-integration.md  project-scanner-usage-guide.md  testing-enhanced-chat-agent.md  testing-orchestrator.md
docs/pugin-repository/: API.md  ARCHITECTURE.md  CI-CD.md  DEPLOYMENT.md  INDEX.md  QUICKSTART.md  SECURITY.md  TROUBLESHOOTING.md
docs/roadmaps/: 02-response-format-feature.md  03-llm-messages-refactor.md  04-uncertainty-analysis-feature.md  05-mcp-integration-feature.md  06-mcp-server-integration.md  07-agent-orchestration.md  08-agent-formatted-output.md  09-code-analysis-agent.md  10-koog-integration.md  11-enhanced-orchestrator.md  12-multi-agent-interaction.md  13-a2a-protocol.md  15-chat-memory-and-ui-implementation.md  16-enhanced-project-scanner.md  17-deploy-pugin-cli-rust.md  18_embedding-indexer-agent.md  19_rag-enrichment-chat.md  20_rag-reranker-threshold.md  21_rag-chunk-source-links.md  22_rag-llm-rerank-enrichment.md  23_enhanced-chat-agent-planning-refactor-v2.md  (+15 more)
mcp-server-rust/: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  INTEGRATION.md  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  config-universal.toml  config.example.toml  docker-compose.yml
mcp-server-rust/docs/: API.md  ARCHITECTURE.md  AUTO_INSTALL.md  EXAMPLES.md  SECURITY.md
mcp-server-rust/scripts/: build-all-platforms.sh  setup.ps1  setup.sh  test.sh
mcp-server-rust/src/: config.rs  error.rs  main.rs  models.rs  security.rs
mcp-server-rust/src/handlers/: directories.rs  files.rs  health.rs  mod.rs
mcp-server-rust/src/services/: file_service.rs
mcp-server-rust/tests/: integration_test.rs
mcp-servers/filesystem-server/: .gitignore  README.md  pyproject.toml
mcp-servers/filesystem-server/src/filesystem_server/: __init__.py  api.py  config.py  main.py  models.py  security.py  service.py
mcp-servers/filesystem-server/tests/: __init__.py  test_api.py
plugin-repository/: .env.example  .gitignore  Cargo.toml  README.md  add-plugin.sh  config.toml  config.toml.example  deploy-repository.sh  prompt.md  setup.sh
plugin-repository/scripts/: README.md  add-plugin.sh  deploy-repository.sh  health-check.sh  update-version.sh
plugin-repository/src/: main.rs
plugin-repository/src/cli/: ai.rs  build.rs  deploy.rs  publish.rs  release.rs  status.rs  validate.rs
plugin-repository/src/commands/: ai.rs  build.rs  deploy.rs  mod.rs  publish.rs  release.rs  status.rs  validate.rs
plugin-repository/src/config/: env_loader.rs  mod.rs  parser.rs  validator.rs
plugin-repository/src/core/: builder.rs  deployer.rs  mod.rs  releaser.rs
plugin-repository/src/core/llm/: agents.rs  mod.rs  prompts.rs  yandexgpt.rs
plugin-repository/src/git/: analyzer.rs  error.rs  history.rs  mod.rs  tags.rs
plugin-repository/src/models/: config.rs  mod.rs  plugin.rs  release.rs  repository.rs
plugin-repository/src/utils/: fs.rs  mod.rs  network.rs  progress.rs
plugin-repository/tests/: cli_help.rs  pipeline.rs
scripts/: start-mcp-server.sh  stop-mcp-server.sh
(+456 files in other folders)
