[package]
name = "mcp-server-rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File system operations
tokio-util = { version = "0.7", features = ["io"] }
mime_guess = "2.0"

# Security
sha2 = "0.10"
hex = "0.4"

# Configuration
config = "0.14"
toml = "0.8"

[dev-dependencies]
# Testing
tokio-test = "0.4"
tempfile = "3.8"
axum-test = "14.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
